# Qt_vehicle_simulator

./: .gitignore  CMakeLists.txt  README.md  WORKER_README.md  main.cpp  qml.qrc
board/: IBatteryDriver.h  IMotorDriver.h  SimBatteryDriver.cpp  SimBatteryDriver.h  SimMotorDriver.cpp  SimMotorDriver.h
controller/: Controller.cpp  Controller.h
devices/: Device.cpp  Device.h
devices_simple/: Device.cpp  Device.h
lib/messageQueue/: CMakeLists.txt
lib/messageQueue/example/: CMakeLists.txt  main.cpp
lib/messageQueue/example/include/messageQueue/example/: Controller.h  Device.h
lib/messageQueue/example/src/: Controller.cpp  Device.cpp
lib/messageQueue/include/messageQueue/: MessageBus.h  Messages.h  ThreadSafeQueue.h
lib/messageQueue/src/: MessageBus.cpp
middleware/: HardwareService.cpp  HardwareService.h  HwTypes.cpp  HwTypes.h
qml/: Main.qml
qml/components/: SocBar.qml  SpeedGauge.qml
qml/pages/: DashboardPage.qml
test_worker/: README.md  main.cpp  readme.md.vn
ui/: UiBackend.cpp  UiBackend.h
